# webserv

./: .dockerignore  .env  .gitignore  .gitmodules  CMakeLists.txt  CPPLINT.cfg  Dockerfile  Makefile  NOTES.md  README.md  docker-compose.yml  docker-entrypoint.sh  main.cpp  tests.py
.github/workflows/: compile_check.yml  integration_test_check.yml  style_check.yml  utest_check.yml
config/: default.conf  server_name_test.conf
html/web1/: index.html
html/web2/: 404.html  index.html
html/web3/: delete_file.html  form_env.html  form_get.html  form_post.html  form_post_perl.html  form_post_php.html  form_save_file.html  form_upload_file.html  index.html  slow_cgi.html
html/web4/: main.css
html/web6/: 500.html  app.js  invalid_headers.py  redirect.py
srcs/: main.cpp
srcs/CGI/: CGI.cpp  CgiHandler.cpp
srcs/app/: CommonSettings.cpp  Config.cpp  Location.cpp  Server.cpp  ServerSettings.cpp  WebServer.cpp  main.cpp  startup.cpp
srcs/config/: AGVTest.conf  ServerConfig.cpp
srcs/http/: HttpHeaders.cpp  HttpRequest.cpp  RequestConfig.cpp
srcs/incs/: AHttpErrorResponse.hpp  AHttpResponse.hpp  CGI.hpp  CgiHandler.hpp  CgiInfo.hpp  CommonConfig.hpp  CommonDefinitions.hpp  CommonSettings.hpp  Config.hpp  Connection.hpp  ConnectionIOStatus.hpp  FDsets.hpp  File.hpp  FormFile.hpp  HttpBaseResponse.hpp  HttpDeleteResponse.hpp  HttpErrorResponse.hpp  HttpGetResponse.hpp  HttpHeaders.hpp  HttpPostResponse.hpp  HttpRedirectionResponse.hpp  HttpRequest.hpp  HttpRequestDTO.hpp  HttpRequestHandler.hpp  HttpResponse.hpp  IRequest.hpp  (+19 more)
tests/: requirements.txt  tests.py
(+173 files in other folders)
